--- a/paper/ms.tex
+++ b/paper/ms.tex
@@ -512,7 +512,7 @@ a rough comparison using the observational criteria \citep{Foex2013,
 multi-modal systems (large DM-DM displacements) is consistent with
 observations; both are in the range $\sim 7\%$. 
 
-Using the same criteria we find that in the simulation there there are
+Using the same criteria we find that in the simulation there are
 $\sim 6.0\times 10^{-7}$ Mpc$^{-3}$ groups similar to \bullg. This
 number density is three times larger than the computed value for
 clusters. This opens up a new observational possibility with surveys
