--- a/paper/ms.tex
+++ b/paper/ms.tex
@@ -376,7 +376,7 @@ reproduces the statistics for the DM-baryon separation found for
 clusters more massive than $>10^{14}$\hMsun\ in a simulation
 which included a description for DM and gas with $8$ times more volume
 and $8$ times less mass resolution than the Bolshoi Simulation. The
-fit is valid for separations larger than $70$\hkpc, beyond which we
+fit is valid for separations larger than $70\hkpc$, beyond which we
 find that it provides a remarkably good description within a factor of
 $\sim 2$ of our results. This gives us confidence in our approach to
 correctly estimate the expected fraction of groups with a DM-gas
@@ -480,7 +480,7 @@ $64 <d_{\rm 2D}/\hkpc< 350$ & 6188 & 6422 & 6635 & 6933 & 151 &
 In this Letter we estimated the fraction of galaxy groups and clusters
 in a $\Lambda$CDM cosmology that could present observational features
 associated to a bullet-like event. This is motivated by the recent
-observational results of \citep{Gastaldello} where a system (\bullg)
+observational results of \cite{Gastaldello} where a system (\bullg)
 on the mass range $1\times 10^{14}$\hMsun\ and velocity dispersion
 $650$\kms was reported to feature a displacement between its baryonic
 (gas) and dark matter components. 
@@ -501,7 +501,7 @@ observed displacement for \bullg. For halos in the cluster sample this
 fraction increases to $60\%$-$80\%$. We also derived an
 estimate for the DM-baryon displacement. In the group sample
 $0.1\%$-$1.0\%$ of the halos show a displacement equal or larger than
-the  measurements of \bullg\ by \citep{Gastaldello}; in the cluster
+the  measurements of \bullg\ by \cite{Gastaldello}; in the cluster
 sample this fraction rises to $4\%$-$10\%$. 
 
 For the case of \bullg\ a fair comparison is achieved against our cluster
@@ -532,7 +532,12 @@ was run at the NASA Ames Research Center.
 J.E.F-R acknowledges support from Vicerrector\'ia de
 Investigaciones through a FAPA starting grant.
 
-G.F. acknowledges support from FONDECYT through grant 3120160.
+J.G.F-T acknowledges support from Universidad de los Andes de Bogot\'a
+- Colombia and Centro de Investigaciones de Astronom\'ia (CIDA) -
+Venezuela. 
+
+G.F. acknowledges support from FONDECYT through grant 3120160 and
+ECOS/CONICYT through grant C12U02.  
 
 T.V. acknowledges support from CONACYT through grant 165365 and
 203489 through the program Estancias posdoctorales y sab\'aticas al
@@ -544,7 +549,139 @@ and ECOS/CONICYT through grant C12U02.
 
 
 \bibliographystyle{apj}
-\bibliography{references} 
+%\bibliography{references} 
+\begin{thebibliography}{24}
+\expandafter\ifx\csname natexlab\endcsname\relax\def\natexlab#1{#1}\fi
+
+\bibitem[{{Brada{\v c}} {et~al.}(2008){Brada{\v c}}, {Allen}, {Treu},
+  {Ebeling}, {Massey}, {Morris}, {von der Linden}, \& {Applegate}}]{Bradac2008}
+{Brada{\v c}}, M., {Allen}, S.~W., {Treu}, T., {Ebeling}, H., {Massey}, R.,
+  {Morris}, R.~G., {von der Linden}, A., \& {Applegate}, D. 2008, \apj, 687,
+  959
+
+\bibitem[{{Cabanac} {et~al.}(2007){Cabanac}, {Alard}, {Dantel-Fort}, {Fort},
+  {Gavazzi}, {Gomez}, {Kneib}, {Le F{\`e}vre}, {Mellier}, {Pello}, {Soucail},
+  {Sygnet}, \& {Valls-Gabaud}}]{Cabanac2007}
+{Cabanac}, R.~A., {Alard}, C., {Dantel-Fort}, M., {Fort}, B., {Gavazzi}, R.,
+  {Gomez}, P., {Kneib}, J.~P., {Le F{\`e}vre}, O., {Mellier}, Y., {Pello}, R.,
+  {Soucail}, G., {Sygnet}, J.~F., \& {Valls-Gabaud}, D. 2007, \aap, 461, 813
+
+\bibitem[{{Clowe} {et~al.}(2006){Clowe}, {Brada{\v c}}, {Gonzalez},
+  {Markevitch}, {Randall}, {Jones}, \& {Zaritsky}}]{Clowe2006}
+{Clowe}, D., {Brada{\v c}}, M., {Gonzalez}, A.~H., {Markevitch}, M., {Randall},
+  S.~W., {Jones}, C., \& {Zaritsky}, D. 2006, \apjl, 648, L109
+
+\bibitem[{{Dahle} {et~al.}(2013){Dahle}, {Sarazin}, {Lopez}, {Kouveliotou},
+  {Patel}, {Rol}, {van der Horst}, {Fynbo}, {Wijers}, {Burrows}, {Gehrels},
+  {Grupe}, {Ramirez-Ruiz}, \& {Micha{\l}owski}}]{Dahle2013}
+{Dahle}, H., {Sarazin}, C.~L., {Lopez}, L.~A., {Kouveliotou}, C., {Patel},
+  S.~K., {Rol}, E., {van der Horst}, A.~J., {Fynbo}, J., {Wijers}, R.~A.~M.~J.,
+  {Burrows}, D.~N., {Gehrels}, N., {Grupe}, D., {Ramirez-Ruiz}, E., \&
+  {Micha{\l}owski}, M.~J. 2013, \apj, 772, 23
+
+\bibitem[{{Dawson} {et~al.}(2012){Dawson}, {Wittman}, {Jee}, {Gee}, {Hughes},
+  {Tyson}, {Schmidt}, {Thorman}, {Brada{\v c}}, {Miyazaki}, {Lemaux}, {Utsumi},
+  \& {Margoniner}}]{Dawson2012}
+{Dawson}, W.~A., {Wittman}, D., {Jee}, M.~J., {Gee}, P., {Hughes}, J.~P.,
+  {Tyson}, J.~A., {Schmidt}, S., {Thorman}, P., {Brada{\v c}}, M., {Miyazaki},
+  S., {Lemaux}, B., {Utsumi}, Y., \& {Margoniner}, V.~E. 2012, \apjl, 747, L42
+
+\bibitem[{{Farrar} \& {Rosen}(2007)}]{Farrar2007}
+{Farrar}, G.~R., \& {Rosen}, R.~A. 2007, Physical Review Letters, 98, 171302
+
+\bibitem[{{Fo{\"e}x} {et~al.}(2013){Fo{\"e}x}, {Motta}, {Limousin}, {Verdugo},
+  {More}, {Cabanac}, {Gavazzi}, \& {Mu{\~n}oz}}]{Foex2013}
+{Fo{\"e}x}, G., {Motta}, V., {Limousin}, M., {Verdugo}, T., {More}, A.,
+  {Cabanac}, R., {Gavazzi}, R., \& {Mu{\~n}oz}, R.~P. 2013, \aap, 559, A105
+
+\bibitem[{{Forero-Romero} {et~al.}(2010){Forero-Romero}, {Gottl{\"o}ber}, \&
+  {Yepes}}]{ForeroRomero2010}
+{Forero-Romero}, J.~E., {Gottl{\"o}ber}, S., \& {Yepes}, G. 2010, \apj, 725,
+  598
+
+\bibitem[{{Gastaldello} {et~al.}(2014){Gastaldello}, {Limousin}, {Foex},
+  {Mu\~noz}, {Verdugo}, {Motta}, {More}, {Cabanac}, {Buote}, {Eckert},
+  {Ettori}, {Fritz}, {Ghizzardi}, {Humphrey}, {Meneghetti}, \&
+  M.}]{Gastaldello}
+{Gastaldello}, F., {Limousin}, M., {Foex}, G., {Mu\~noz}, R., {Verdugo}, T.,
+  {Motta}, V., {More}, A., {Cabanac}, R., {Buote}, D., {Eckert}, D., {Ettori},
+  S., {Fritz}, A., {Ghizzardi}, S., {Humphrey}, P., {Meneghetti}, M., \& M., R.
+  2014, \mnras\ accepted
+
+\bibitem[{{Hayashi} \& {White}(2006)}]{Hayashi2006}
+{Hayashi}, E., \& {White}, S.~D.~M. 2006, \mnras, 370, L38
+
+\bibitem[{{Hinshaw} {et~al.}(2013){Hinshaw}, {Larson}, {Komatsu}, {Spergel},
+  {Bennett}, {Dunkley}, {Nolta}, {Halpern}, {Hill}, {Odegard}, {Page}, {Smith},
+  {Weiland}, {Gold}, {Jarosik}, {Kogut}, {Limon}, {Meyer}, {Tucker}, {Wollack},
+  \& {Wright}}]{hinshaw_etal13}
+{Hinshaw}, G., {Larson}, D., {Komatsu}, E., {Spergel}, D.~N., {Bennett}, C.~L.,
+  {Dunkley}, J., {Nolta}, M.~R., {Halpern}, M., {Hill}, R.~S., {Odegard}, N.,
+  {Page}, L., {Smith}, K.~M., {Weiland}, J.~L., {Gold}, B., {Jarosik}, N.,
+  {Kogut}, A., {Limon}, M., {Meyer}, S.~S., {Tucker}, G.~S., {Wollack}, E., \&
+  {Wright}, E.~L. 2013, \apjs, 208, 19
+
+\bibitem[{{Klypin} {et~al.}(1999){Klypin}, {Gottl{\"o}ber}, {Kravtsov}, \&
+  {Khokhlov}}]{BDMb}
+{Klypin}, A., {Gottl{\"o}ber}, S., {Kravtsov}, A.~V., \& {Khokhlov}, A.~M.
+  1999, \apj, 516, 530
+
+\bibitem[{{Klypin} \& {Holtzman}(1997)}]{BDM}
+{Klypin}, A., \& {Holtzman}, J. 1997, ArXiv Astrophysics e-prints
+
+\bibitem[{{Klypin} {et~al.}(2011){Klypin}, {Trujillo-Gomez}, \&
+  {Primack}}]{2011ApJ...740..102K}
+{Klypin}, A.~A., {Trujillo-Gomez}, S., \& {Primack}, J. 2011, \apj, 740, 102
+
+\bibitem[{{Kravtsov} {et~al.}(1997){Kravtsov}, {Klypin}, \&
+  {Khokhlov}}]{Kravtsov1997}
+{Kravtsov}, A.~V., {Klypin}, A.~A., \& {Khokhlov}, A.~M. 1997, \apjs, 111, 73
+
+\bibitem[{{Lee} \& {Baldi}(2012)}]{Lee2012}
+{Lee}, J., \& {Baldi}, M. 2012, \apj, 747, 45
+
+\bibitem[{{Lee} \& {Komatsu}(2010)}]{Lee2010}
+{Lee}, J., \& {Komatsu}, E. 2010, \apj, 718, 60
+
+\bibitem[{{Markevitch} {et~al.}(2004){Markevitch}, {Gonzalez}, {Clowe},
+  {Vikhlinin}, {Forman}, {Jones}, {Murray}, \& {Tucker}}]{Markevitch2004}
+{Markevitch}, M., {Gonzalez}, A.~H., {Clowe}, D., {Vikhlinin}, A., {Forman},
+  W., {Jones}, C., {Murray}, S., \& {Tucker}, W. 2004, \apj, 606, 819
+
+\bibitem[{{Merten} {et~al.}(2011){Merten}, {Coe}, {Dupke}, {Massey}, {Zitrin},
+  {Cypriano}, {Okabe}, {Frye}, {Braglia}, {Jim{\'e}nez-Teja}, {Ben{\'{\i}}tez},
+  {Broadhurst}, {Rhodes}, {Meneghetti}, {Moustakas}, {Sodr{\'e}}, {Krick}, \&
+  {Bregman}}]{Merten2011}
+{Merten}, J., {Coe}, D., {Dupke}, R., {Massey}, R., {Zitrin}, A., {Cypriano},
+  E.~S., {Okabe}, N., {Frye}, B., {Braglia}, F.~G., {Jim{\'e}nez-Teja}, Y.,
+  {Ben{\'{\i}}tez}, N., {Broadhurst}, T., {Rhodes}, J., {Meneghetti}, M.,
+  {Moustakas}, L.~A., {Sodr{\'e}}, Jr., L., {Krick}, J., \& {Bregman}, J.~N.
+  2011, \mnras, 417, 333
+
+\bibitem[{{More} {et~al.}(2012){More}, {Cabanac}, {More}, {Alard}, {Limousin},
+  {Kneib}, {Gavazzi}, \& {Motta}}]{More2012}
+{More}, A., {Cabanac}, R., {More}, S., {Alard}, C., {Limousin}, M., {Kneib},
+  J.-P., {Gavazzi}, R., \& {Motta}, V. 2012, \apj, 749, 38
+
+\bibitem[{{Poole} {et~al.}(2006){Poole}, {Fardal}, {Babul}, {McCarthy},
+  {Quinn}, \& {Wadsley}}]{Poole2006}
+{Poole}, G.~B., {Fardal}, M.~A., {Babul}, A., {McCarthy}, I.~G., {Quinn}, T.,
+  \& {Wadsley}, J. 2006, \mnras, 373, 881
+
+\bibitem[{{Riebe} {et~al.}(2013){Riebe}, {Partl}, {Enke}, {Forero-Romero},
+  {Gottl{\"o}ber}, {Klypin}, {Lemson}, {Prada}, {Primack}, {Steinmetz}, \&
+  {Turchaninov}}]{Riebe2013}
+{Riebe}, K., {Partl}, A.~M., {Enke}, H., {Forero-Romero}, J., {Gottl{\"o}ber},
+  S., {Klypin}, A., {Lemson}, G., {Prada}, F., {Primack}, J.~R., {Steinmetz},
+  M., \& {Turchaninov}, V. 2013, Astronomische Nachrichten, 334, 691
+
+\bibitem[{{Springel} \& {Farrar}(2007)}]{Springel2007}
+{Springel}, V., \& {Farrar}, G.~R. 2007, \mnras, 380, 911
+
+\bibitem[{{Thompson} \& {Nagamine}(2012)}]{Thompson2012}
+{Thompson}, R., \& {Nagamine}, K. 2012, \mnras, 419, 3560
+
+\end{thebibliography}
 
 
 \end{document}
