--- a/paper/ms.tex
+++ b/paper/ms.tex
@@ -257,7 +257,7 @@ $D_{\rm off} < 1.0$ and $\mu\sim -1$.
 
 \begin{figure*}
 \begin{center}
-\includegraphics[width=0.9\textwidth]{figure_1.eps}
+\includegraphics[width=0.9\textwidth]{figure_1.pdf}
 \end{center}
 \caption{
   Integrated probability distribution for the displacement between the
@@ -302,7 +302,7 @@ distributions are similar for the two samples at all redshifts.
 
 \begin{figure*}
 \begin{center}
-\includegraphics[width=1.0\textwidth]{figure_2.eps}
+\includegraphics[width=1.0\textwidth]{figure_2.pdf}
 \end{center}
 \caption{2D histograms in the plane $\mu$-$D_{\rm off}$. The left
   panel corresponds to clusters and the right panel to groups. The data
@@ -440,7 +440,7 @@ sample.
 
 \begin{figure*}
 \begin{center}
-\includegraphics[width=0.9\textwidth]{figure_3.eps}
+\includegraphics[width=0.9\textwidth]{figure_3.pdf}
 \end{center}
 \caption{Integrated probability distribution for the estimated
   DM-gas displacements in the group and cluster samples. Continous (dashed)
