updates for the referee

--- a/paper/references.bib
+++ b/paper/references.bib
@@ -1,3 +1,72 @@
+@ARTICLE{Sheth2001,
+   author = {{Sheth}, R.~K. and {Mo}, H.~J. and {Tormen}, G.},
+    title = "{Ellipsoidal collapse and an improved model for the number and spatial distribution of dark matter haloes}",
+  journal = {\mnras},
+   eprint = {astro-ph/9907024},
+ keywords = {GALAXIES: CLUSTERS: GENERAL, COSMOLOGY: THEORY, DARK MATTER},
+     year = 2001,
+    month = may,
+   volume = 323,
+    pages = {1-12},
+      doi = {10.1046/j.1365-8711.2001.04006.x},
+   adsurl = {http://adsabs.harvard.edu/abs/2001MNRAS.323....1S},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
+@ARTICLE{hmfcalc,
+   author = {{Murray}, S.~G. and {Power}, C. and {Robotham}, A.~S.~G},
+    title = "{HMFcalc: An online tool for calculating dark matter halo mass functions}",
+  journal = {Astronomy and Computing},
+archivePrefix = "arXiv",
+   eprint = {1306.6721},
+ primaryClass = "astro-ph.CO",
+     year = 2013,
+    month = nov,
+   volume = 3,
+    pages = {23-34},
+      doi = {10.1016/j.ascom.2013.11.001},
+   adsurl = {http://adsabs.harvard.edu/abs/2013A%26C.....3...23M},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
+@ARTICLE{Mastropietro2008,
+   author = {{Mastropietro}, C. and {Burkert}, A.},
+    title = "{Simulating the Bullet Cluster}",
+  journal = {\mnras},
+archivePrefix = "arXiv",
+   eprint = {0711.0967},
+ keywords = {methods: N-body simulations , galaxies: clusters: individual: 1E0657-56 , dark matter , X-rays: galaxies: clusters},
+     year = 2008,
+    month = sep,
+   volume = 389,
+    pages = {967-988},
+      doi = {10.1111/j.1365-2966.2008.13626.x},
+   adsurl = {http://adsabs.harvard.edu/abs/2008MNRAS.389..967M},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+@ARTICLE{Milosavljevic2007,
+   author = {{Milosavljevi{\'c}}, M. and {Koda}, J. and {Nagai}, D. and {Nakar}, E. and 
+	{Shapiro}, P.~R.},
+    title = "{The Cluster-Merger Shock in 1E 0657-56: Faster than a Speeding Bullet?}",
+  journal = {\apjl},
+   eprint = {astro-ph/0703199},
+ keywords = {Cosmology: Dark Matter, Galaxies: Clusters: General, Galaxies: Clusters: Individual: Alphanumeric: 1E 0657-56, Galaxies: Intergalactic Medium, Shock Waves, X-Rays: Galaxies: Clusters},
+     year = 2007,
+    month = jun,
+   volume = 661,
+    pages = {L131-L134},
+      doi = {10.1086/518960},
+   adsurl = {http://adsabs.harvard.edu/abs/2007ApJ...661L.131M},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
 @ARTICLE{Foex2013,
    author = {{Fo{\"e}x}, G. and {Motta}, V. and {Limousin}, M. and {Verdugo}, T. and 
 	{More}, A. and {Cabanac}, R. and {Gavazzi}, R. and {Mu{\~n}oz}, R.~P.
