--- a/paper/ms.tex
+++ b/paper/ms.tex
@@ -2,7 +2,7 @@
 %\documentclass{aastex}
 \submitted{{\it Submitted for publication in ApJL}}
 \usepackage {graphicx}
-
+\usepackage{hyperref}
 \usepackage{amsmath} 
 \usepackage{amssymb} 
 \usepackage{graphics}
@@ -27,12 +27,12 @@
 \newcommand{\bullb}{MACS J0025.4-1222}
 \newcommand{\bulla}{1E0657---56} 
 \newcommand{\bullg}{SL2S J08544-0121}
-\shorttitle{Bullet Groups}
+\shorttitle{Bullet groups}
 \shortauthors{Fern\'andez-Trincado et al.}
 
 \begin{document} 
 
-\title{The abundance of Bullet-Groups in $\Lambda$CDM}
+\title{The Abundance of Bullet-like Groups in $\Lambda$CDM}
 \author{J. G. Fern\'andez-Trincado$^{1,2,3}$, J. E. Forero-Romero$^1$,
   G.Foex$^4$, T. Verdugo$^3$ and V. Motta$^4$} 
 \affil{$^1$ Departamento de F\'{i}sica, Universidad de los Andes,
@@ -88,12 +88,14 @@ evidence for the existence of dark matter
 the Cold Dark Matter (CDM) paradigm itself by quantifying different
 aspects such as the expected displacement between the dominant dark
 matter and baryonic component in a $\Lambda$CDM Universe
-\citep{ForeroRomero2010} or the substructure velocity required to
-produce such displacement \citep{Hayashi2006, Springel2007,
-  Thompson2012}. It has also been used to constrain the dark matter
-particle self-interaction cross section and to explore possible
-extensions to the concordance cosmological model
-\citep{Farrar2007,Lee2010,Lee2012}.      
+\citep{ForeroRomero2010}, the substructure velocity required to
+produce such displacement
+\citep{Milosavljevic2007,Springel2007,Mastropietro20008} and its
+abundance in large N-body cosmological simulations
+\citep{Hayashi2006,Lee2012, Thompson2012}. It has also been used to
+constrain the dark matter particle self-interaction cross section and
+to explore possible extensions to the concordance cosmological model
+\citep{Farrar2007,Lee2010}.  
  
 
 Since then, other examples of Bullet-like systems have been found; 
@@ -101,22 +103,24 @@ MACS J0025.4-1222 \citep{Bradac2008}, Abell 2744 \citep{Merten2011},
 DLSCL J0916.2+2951 \citep{Dawson2012}, ZwCl 1234.0+02916
 \citep{Dahle2013}. Recently \citep{Gastaldello} observed a DM-gas
 displacement of $87\pm 14$\hkpc and a DM-DM separation of $186\pm
-30$\hkpc in \bullg, a group-like system with a total
+30$\hkpc in \bullg, a low mass cluster system with a total
 mass $2.4\pm 0.6 \times 10^{14}\Msun$ found in the the Strong Lensing
 Legacy Survey (SL2S) sample \citep{Cabanac2007,More2012}.
 
 
-Groups around this mass are $\sim10$ times more abundant than clusters
-in the mass range of the Bullet Cluster $>10^{15}$\hMsun. This 
-should open up the possibility of finding Bullet Groups in large
-numbers to test $\Lambda$CDM. However, a larger abundance of small
-mass systems has to be weighted by the probability of being in a
-merger and  presenting a large displacement between the DM and
-gaseous components.  These two conditions (merger rates, maximum
-possible displacement) are a funcion of DM halo mass in $\Lambda$CDM
-cosmologies.  A detailed statistical study to estimate the DM-gas
-displacements of Bullets has been performed for clusters
-\citep{ForeroRomero2010} but not for lower mass systems.
+Using a Sheth-Mo-Tormen mass function at $z=0$, one can estimate that
+systems around this mass are $\sim 65$ times more abundant than massive
+clusters in the mass range of the Bullet Cluster $>10^{15}$\hMsun
+\citep{Sheth2001,hmfcalc}. This  should open up the possibility of
+finding Bullet-like groups in large numbers to test
+$\Lambda$CDM. However, a larger abundance of small mass systems has to
+be weighted by the probability of being in a merger and  presenting a
+large displacement between the DM and gaseous components.  These two
+conditions (merger rates, maximum possible displacement) are a funcion
+of DM halo mass in $\Lambda$CDM cosmologies.  A detailed statistical
+study to estimate the DM-gas displacements of bullets has been
+performed for clusters \citep{ForeroRomero2010} but not for lower mass
+systems. 
 
 In this Letter we extend such study for systems in the group mass
 scale. We measure the abundance of DM systems with a multi-modal
@@ -138,20 +142,21 @@ perspectives to finally conclude in Section \ref{sec:conclusions}.
 \label{sec:simulation}
 
 We use the Bolshoi Run, a cosmological DM only simulation over a cubic
-volume of 250\hMpc comoving on a side. The simulation uses the ART
-code \citep{Kravtsov1997} to follow the evolution of a dark matter
-density field from $z=80$ to $z=0$ sampled with $2048^3$  particles. The
-cosmology used  corresponds to  the spatially flat concordance model
-with the following parameters:  the density parameter for matter (dark
-matter and baryons) $\Omega_m=0.27$, the density parameter for baryonic matter
+volume of 250\hMpc comoving on a side \citep{2011ApJ...740..120K}. The
+simulation uses the ART code \citep{Kravtsov1997} to follow the
+evolution of a dark matter density field from $z=80$ to $z=0$ sampled
+with $2048^3$  particles. The cosmology used  corresponds to  the
+spatially flat concordance model with the following parameters:  the
+density parameter for matter (dark matter and baryons)
+$\Omega_m=0.27$, the density parameter for baryonic matter
 $\Omega_b=0.0469$, the density parameter for dark energy
-$\Omega_{\Lambda}=0.73$, the Hubble parameter $h=0.7$, the
-slope of the primordial power spectrum $n=0.95$ and the amplitude of mass
+$\Omega_{\Lambda}=0.73$, the Hubble parameter $h=0.7$, the slope of
+the primordial power spectrum $n=0.95$ and the amplitude of mass
 density fluctuations (at redshift z$=$0) $\sigma_8=0.82$.  These
 cosmological parameters are consistent with the nine-year Wilikinson
 Microwave Anisotropy Probe (WMAP) results \citep{hinshaw_etal13}. A
 detailed presentation of the simulation can be found in
-\citet{2011ApJ...740..102K}. 
+\citet{2011ApJ...740..102K}.  
 
 This results in a mass resolution of $1.35 \times 10^8$
 M$_{\odot}$h$^{-1}$ for each computational particle. The completeness
@@ -166,11 +171,11 @@ important feature of BDM is that it allows us to detect sub-halos
 inside larger virialized structures.     
 
 All the raw data used in this Letter are available through the
-Multidark database \footnote{\texttt{www.multidark.org}}
+Multidark database \footnote{\url{www.multidark.org}}
 \citep{Riebe2013}.  Furthermore, in order to facilitate the
 reproducibility and reuse of our results we have made available all
 the data and the source code available in a public
-repository \footnote{\texttt{https://github.com/Fernandez-Trincado/Bullet\_Groups-2014}}. 
+repository \footnote{\url{https://github.com/Fernandez-Trincado/Bullet\_Groups-2014}}.  
  
 To construct our main halo sample we follow three steps. Firstly, we
 select all the host halos (i.e. halos that are not inside a larger
@@ -181,7 +186,7 @@ velocities $V_{\rm c}\geq 75$\kms ($\geq 5\times
 massive sub-halo.  
 
 Each one of the pairs (host \& sub-halo) is considered as a
-potential Bullet system and is kept for the analysis described in the
+potential bullet system and is kept for the analysis described in the
 next Section  by using the sub-halos as the tracer of the sub-dominant
 dark matter clump in the merging cluster, i.e. the bullets.  
 
@@ -197,15 +202,16 @@ first row of Table \ref{table:numbers}.
 \section{Bullet Geometry and Measurement Setup}
 \label{sec:setup}
 
-Bullet-like configurations have two dominand dark matter structures:
+Bullet-like configurations have two dominant dark matter structures:
 the host halo and the dominant sub-halo. We describe the kinematics of
 this configuration by the  position and velocity vectors of the
 sub-halo in a frame of reference where the main halo is at rest; thus
 $\vec{v{}}=\vec{v}_{\rm sub}-\vec{v}_{\rm host}$ and
 $\vec{r{}}=\vec{r}_{\rm sub}-\vec{r}_{\rm host}$, where the subscripts $host$
-and $sub$ refer to the position of the minium of potential for the
-host and sub-halo in the frame of reference of the simulation,
-respectively.  
+and $sub$ refer to the host and sub-halo, respectively. The positions
+$\vec{r}$ correspond to the minium of potential and the velocities
+$\vec{v}$ are computed as an average of the bulk velocities of all
+simulation particles in the structure of interest.
 
 The angle between these two vectors can be quantified by, 
 \begin{equation}
@@ -230,7 +236,10 @@ measurement of how much the host halo is perturbed.
 In this Letter we work with two quantities that could be inferred
 from observations of Bullet-like systems. The projected distance
 between two dominant DM clumps, $d_{\rm 2D}$, and the projected distance
-between the DM and the gas clumps, $d_{\rm 2D}^{\rm bar}$.
+between the DM and the gas clumps, $d_{\rm 2D}^{\rm bar}$. The
+projection is computed along the same axis for all halos at all
+redshifts, we present the result of the projection along the $z$-axis
+of the simulation. 
 
 From the simulation point of view, the first quantity can be
 translated into the 2D projected values of $||\vec{r}||$ and its value
@@ -281,7 +290,7 @@ probability distribution for the DM-DM displacements, $d_{\rm 2D}$. The
 left panel shows the displacement in physical units and the right
 panel as a fraction of the virial radius of the host halo.  The panel
 with the projected 2D physical displacements also shows a vertical
-stripe with the estimated displacement for the Bullet-group reported
+stripe with the estimated displacement for the bullet group reported
 by \cite{Gastaldello}.   
 
 In the group sample we see that a fraction of
@@ -306,7 +315,10 @@ distributions are similar for the two samples at all redshifts.
 \end{center}
 \caption{2D histograms in the plane $\mu$-$D_{\rm off}$. The left
   panel corresponds to clusters and the right panel to groups. The data
-  used to construct this histogram includes halos at all redshifts.}
+  used to construct this histogram includes halos at all
+  redshifts. This approximation to increase the statistical power of
+  the sample is justified because the redshift evolution of this plot
+  is weak.} 
 \label{fig:geometry}
 \end{figure*}
 
@@ -479,7 +491,7 @@ $64 <d_{\rm 2D}/\hkpc< 350$ & 6188 & 6422 & 6635 & 6933 & 151 &
 
 In this Letter we estimated the fraction of galaxy groups and clusters
 in a $\Lambda$CDM cosmology that could present observational features
-associated to a bullet-like event. This is motivated by the recent
+associated to a Bullet-like event. This is motivated by the recent
 observational results of \cite{Gastaldello} where a system (\bullg)
 on the mass range $1\times 10^{14}$\hMsun\ and velocity dispersion
 $650$\kms was reported to feature a displacement between its baryonic
@@ -507,7 +519,7 @@ sample this fraction rises to $4\%$-$10\%$.
 For the case of \bullg\ a fair comparison is achieved against our cluster
 sample which has statistics dominated by objects of similar mass. In
 a rough comparison using the observational criteria \citep{Foex2013,
-  Gastaldello} we find that the relative number of bullets
+  Gastaldello} we find that the relative number of Bullet-like systems
 (large DM-gas displacement) with respect to a general sample of
 multi-modal systems (large DM-DM displacements) is consistent with
 observations; both are in the range $\sim 7\%$. 
@@ -546,142 +558,8 @@ extranjero para la consolidaci\'on de grupos de investigaci\'on.
 V.M. gratefully acknowledges FONDECYT support through grant 1120741
 and ECOS/CONICYT through grant C12U02. 
 
-
-
 \bibliographystyle{apj}
-%\bibliography{references} 
-\begin{thebibliography}{24}
-\expandafter\ifx\csname natexlab\endcsname\relax\def\natexlab#1{#1}\fi
-
-\bibitem[{{Brada{\v c}} {et~al.}(2008){Brada{\v c}}, {Allen}, {Treu},
-  {Ebeling}, {Massey}, {Morris}, {von der Linden}, \& {Applegate}}]{Bradac2008}
-{Brada{\v c}}, M., {Allen}, S.~W., {Treu}, T., {Ebeling}, H., {Massey}, R.,
-  {Morris}, R.~G., {von der Linden}, A., \& {Applegate}, D. 2008, \apj, 687,
-  959
-
-\bibitem[{{Cabanac} {et~al.}(2007){Cabanac}, {Alard}, {Dantel-Fort}, {Fort},
-  {Gavazzi}, {Gomez}, {Kneib}, {Le F{\`e}vre}, {Mellier}, {Pello}, {Soucail},
-  {Sygnet}, \& {Valls-Gabaud}}]{Cabanac2007}
-{Cabanac}, R.~A., {Alard}, C., {Dantel-Fort}, M., {Fort}, B., {Gavazzi}, R.,
-  {Gomez}, P., {Kneib}, J.~P., {Le F{\`e}vre}, O., {Mellier}, Y., {Pello}, R.,
-  {Soucail}, G., {Sygnet}, J.~F., \& {Valls-Gabaud}, D. 2007, \aap, 461, 813
-
-\bibitem[{{Clowe} {et~al.}(2006){Clowe}, {Brada{\v c}}, {Gonzalez},
-  {Markevitch}, {Randall}, {Jones}, \& {Zaritsky}}]{Clowe2006}
-{Clowe}, D., {Brada{\v c}}, M., {Gonzalez}, A.~H., {Markevitch}, M., {Randall},
-  S.~W., {Jones}, C., \& {Zaritsky}, D. 2006, \apjl, 648, L109
-
-\bibitem[{{Dahle} {et~al.}(2013){Dahle}, {Sarazin}, {Lopez}, {Kouveliotou},
-  {Patel}, {Rol}, {van der Horst}, {Fynbo}, {Wijers}, {Burrows}, {Gehrels},
-  {Grupe}, {Ramirez-Ruiz}, \& {Micha{\l}owski}}]{Dahle2013}
-{Dahle}, H., {Sarazin}, C.~L., {Lopez}, L.~A., {Kouveliotou}, C., {Patel},
-  S.~K., {Rol}, E., {van der Horst}, A.~J., {Fynbo}, J., {Wijers}, R.~A.~M.~J.,
-  {Burrows}, D.~N., {Gehrels}, N., {Grupe}, D., {Ramirez-Ruiz}, E., \&
-  {Micha{\l}owski}, M.~J. 2013, \apj, 772, 23
-
-\bibitem[{{Dawson} {et~al.}(2012){Dawson}, {Wittman}, {Jee}, {Gee}, {Hughes},
-  {Tyson}, {Schmidt}, {Thorman}, {Brada{\v c}}, {Miyazaki}, {Lemaux}, {Utsumi},
-  \& {Margoniner}}]{Dawson2012}
-{Dawson}, W.~A., {Wittman}, D., {Jee}, M.~J., {Gee}, P., {Hughes}, J.~P.,
-  {Tyson}, J.~A., {Schmidt}, S., {Thorman}, P., {Brada{\v c}}, M., {Miyazaki},
-  S., {Lemaux}, B., {Utsumi}, Y., \& {Margoniner}, V.~E. 2012, \apjl, 747, L42
-
-\bibitem[{{Farrar} \& {Rosen}(2007)}]{Farrar2007}
-{Farrar}, G.~R., \& {Rosen}, R.~A. 2007, Physical Review Letters, 98, 171302
-
-\bibitem[{{Fo{\"e}x} {et~al.}(2013){Fo{\"e}x}, {Motta}, {Limousin}, {Verdugo},
-  {More}, {Cabanac}, {Gavazzi}, \& {Mu{\~n}oz}}]{Foex2013}
-{Fo{\"e}x}, G., {Motta}, V., {Limousin}, M., {Verdugo}, T., {More}, A.,
-  {Cabanac}, R., {Gavazzi}, R., \& {Mu{\~n}oz}, R.~P. 2013, \aap, 559, A105
-
-\bibitem[{{Forero-Romero} {et~al.}(2010){Forero-Romero}, {Gottl{\"o}ber}, \&
-  {Yepes}}]{ForeroRomero2010}
-{Forero-Romero}, J.~E., {Gottl{\"o}ber}, S., \& {Yepes}, G. 2010, \apj, 725,
-  598
-
-\bibitem[{{Gastaldello} {et~al.}(2014){Gastaldello}, {Limousin}, {Foex},
-  {Mu\~noz}, {Verdugo}, {Motta}, {More}, {Cabanac}, {Buote}, {Eckert},
-  {Ettori}, {Fritz}, {Ghizzardi}, {Humphrey}, {Meneghetti}, \&
-  M.}]{Gastaldello}
-{Gastaldello}, F., {Limousin}, M., {Foex}, G., {Mu\~noz}, R., {Verdugo}, T.,
-  {Motta}, V., {More}, A., {Cabanac}, R., {Buote}, D., {Eckert}, D., {Ettori},
-  S., {Fritz}, A., {Ghizzardi}, S., {Humphrey}, P., {Meneghetti}, M., \& M., R.
-  2014, \mnras\ accepted
-
-\bibitem[{{Hayashi} \& {White}(2006)}]{Hayashi2006}
-{Hayashi}, E., \& {White}, S.~D.~M. 2006, \mnras, 370, L38
-
-\bibitem[{{Hinshaw} {et~al.}(2013){Hinshaw}, {Larson}, {Komatsu}, {Spergel},
-  {Bennett}, {Dunkley}, {Nolta}, {Halpern}, {Hill}, {Odegard}, {Page}, {Smith},
-  {Weiland}, {Gold}, {Jarosik}, {Kogut}, {Limon}, {Meyer}, {Tucker}, {Wollack},
-  \& {Wright}}]{hinshaw_etal13}
-{Hinshaw}, G., {Larson}, D., {Komatsu}, E., {Spergel}, D.~N., {Bennett}, C.~L.,
-  {Dunkley}, J., {Nolta}, M.~R., {Halpern}, M., {Hill}, R.~S., {Odegard}, N.,
-  {Page}, L., {Smith}, K.~M., {Weiland}, J.~L., {Gold}, B., {Jarosik}, N.,
-  {Kogut}, A., {Limon}, M., {Meyer}, S.~S., {Tucker}, G.~S., {Wollack}, E., \&
-  {Wright}, E.~L. 2013, \apjs, 208, 19
-
-\bibitem[{{Klypin} {et~al.}(1999){Klypin}, {Gottl{\"o}ber}, {Kravtsov}, \&
-  {Khokhlov}}]{BDMb}
-{Klypin}, A., {Gottl{\"o}ber}, S., {Kravtsov}, A.~V., \& {Khokhlov}, A.~M.
-  1999, \apj, 516, 530
-
-\bibitem[{{Klypin} \& {Holtzman}(1997)}]{BDM}
-{Klypin}, A., \& {Holtzman}, J. 1997, ArXiv Astrophysics e-prints
-
-\bibitem[{{Klypin} {et~al.}(2011){Klypin}, {Trujillo-Gomez}, \&
-  {Primack}}]{2011ApJ...740..102K}
-{Klypin}, A.~A., {Trujillo-Gomez}, S., \& {Primack}, J. 2011, \apj, 740, 102
-
-\bibitem[{{Kravtsov} {et~al.}(1997){Kravtsov}, {Klypin}, \&
-  {Khokhlov}}]{Kravtsov1997}
-{Kravtsov}, A.~V., {Klypin}, A.~A., \& {Khokhlov}, A.~M. 1997, \apjs, 111, 73
-
-\bibitem[{{Lee} \& {Baldi}(2012)}]{Lee2012}
-{Lee}, J., \& {Baldi}, M. 2012, \apj, 747, 45
-
-\bibitem[{{Lee} \& {Komatsu}(2010)}]{Lee2010}
-{Lee}, J., \& {Komatsu}, E. 2010, \apj, 718, 60
-
-\bibitem[{{Markevitch} {et~al.}(2004){Markevitch}, {Gonzalez}, {Clowe},
-  {Vikhlinin}, {Forman}, {Jones}, {Murray}, \& {Tucker}}]{Markevitch2004}
-{Markevitch}, M., {Gonzalez}, A.~H., {Clowe}, D., {Vikhlinin}, A., {Forman},
-  W., {Jones}, C., {Murray}, S., \& {Tucker}, W. 2004, \apj, 606, 819
-
-\bibitem[{{Merten} {et~al.}(2011){Merten}, {Coe}, {Dupke}, {Massey}, {Zitrin},
-  {Cypriano}, {Okabe}, {Frye}, {Braglia}, {Jim{\'e}nez-Teja}, {Ben{\'{\i}}tez},
-  {Broadhurst}, {Rhodes}, {Meneghetti}, {Moustakas}, {Sodr{\'e}}, {Krick}, \&
-  {Bregman}}]{Merten2011}
-{Merten}, J., {Coe}, D., {Dupke}, R., {Massey}, R., {Zitrin}, A., {Cypriano},
-  E.~S., {Okabe}, N., {Frye}, B., {Braglia}, F.~G., {Jim{\'e}nez-Teja}, Y.,
-  {Ben{\'{\i}}tez}, N., {Broadhurst}, T., {Rhodes}, J., {Meneghetti}, M.,
-  {Moustakas}, L.~A., {Sodr{\'e}}, Jr., L., {Krick}, J., \& {Bregman}, J.~N.
-  2011, \mnras, 417, 333
-
-\bibitem[{{More} {et~al.}(2012){More}, {Cabanac}, {More}, {Alard}, {Limousin},
-  {Kneib}, {Gavazzi}, \& {Motta}}]{More2012}
-{More}, A., {Cabanac}, R., {More}, S., {Alard}, C., {Limousin}, M., {Kneib},
-  J.-P., {Gavazzi}, R., \& {Motta}, V. 2012, \apj, 749, 38
-
-\bibitem[{{Poole} {et~al.}(2006){Poole}, {Fardal}, {Babul}, {McCarthy},
-  {Quinn}, \& {Wadsley}}]{Poole2006}
-{Poole}, G.~B., {Fardal}, M.~A., {Babul}, A., {McCarthy}, I.~G., {Quinn}, T.,
-  \& {Wadsley}, J. 2006, \mnras, 373, 881
-
-\bibitem[{{Riebe} {et~al.}(2013){Riebe}, {Partl}, {Enke}, {Forero-Romero},
-  {Gottl{\"o}ber}, {Klypin}, {Lemson}, {Prada}, {Primack}, {Steinmetz}, \&
-  {Turchaninov}}]{Riebe2013}
-{Riebe}, K., {Partl}, A.~M., {Enke}, H., {Forero-Romero}, J., {Gottl{\"o}ber},
-  S., {Klypin}, A., {Lemson}, G., {Prada}, F., {Primack}, J.~R., {Steinmetz},
-  M., \& {Turchaninov}, V. 2013, Astronomische Nachrichten, 334, 691
-
-\bibitem[{{Springel} \& {Farrar}(2007)}]{Springel2007}
-{Springel}, V., \& {Farrar}, G.~R. 2007, \mnras, 380, 911
-
-\bibitem[{{Thompson} \& {Nagamine}(2012)}]{Thompson2012}
-{Thompson}, R., \& {Nagamine}, K. 2012, \mnras, 419, 3560
-
-\end{thebibliography}
+\bibliography{references} 
 
 
 \end{document}
