--- a/paper/ms.tex
+++ b/paper/ms.tex
@@ -32,7 +32,7 @@
 
 \begin{document} 
 
-\title{The Abundance of Bullet-like Groups in $\Lambda$CDM}
+\title{The Abundance of Bullet Groups in $\Lambda$CDM}
 \author{J. G. Fern\'andez-Trincado$^{1,2,3}$, J. E. Forero-Romero$^1$,
   G.Foex$^4$, T. Verdugo$^3$ and V. Motta$^4$} 
 \affil{$^1$ Departamento de F\'{i}sica, Universidad de los Andes,
@@ -90,7 +90,7 @@ aspects such as the expected displacement between the dominant dark
 matter and baryonic component in a $\Lambda$CDM Universe
 \citep{ForeroRomero2010}, the substructure velocity required to
 produce such displacement
-\citep{Milosavljevic2007,Springel2007,Mastropietro20008} and its
+\citep{Milosavljevic2007,Springel2007,Mastropietro2008} and its
 abundance in large N-body cosmological simulations
 \citep{Hayashi2006,Lee2012, Thompson2012}. It has also been used to
 constrain the dark matter particle self-interaction cross section and
@@ -142,7 +142,7 @@ perspectives to finally conclude in Section \ref{sec:conclusions}.
 \label{sec:simulation}
 
 We use the Bolshoi Run, a cosmological DM only simulation over a cubic
-volume of 250\hMpc comoving on a side \citep{2011ApJ...740..120K}. The
+volume of 250\hMpc comoving on a side \citep{2011ApJ...740..102K}. The
 simulation uses the ART code \citep{Kravtsov1997} to follow the
 evolution of a dark matter density field from $z=80$ to $z=0$ sampled
 with $2048^3$  particles. The cosmology used  corresponds to  the
@@ -186,7 +186,7 @@ velocities $V_{\rm c}\geq 75$\kms ($\geq 5\times
 massive sub-halo.  
 
 Each one of the pairs (host \& sub-halo) is considered as a
-potential bullet system and is kept for the analysis described in the
+potential Bullet-like system and is kept for the analysis described in the
 next Section  by using the sub-halos as the tracer of the sub-dominant
 dark matter clump in the merging cluster, i.e. the bullets.  
 
@@ -313,12 +313,14 @@ distributions are similar for the two samples at all redshifts.
 \begin{center}
 \includegraphics[width=1.0\textwidth]{figure_2.pdf}
 \end{center}
-\caption{2D histograms in the plane $\mu$-$D_{\rm off}$. The left
-  panel corresponds to clusters and the right panel to groups. The data
-  used to construct this histogram includes halos at all
-  redshifts. This approximation to increase the statistical power of
-  the sample is justified because the redshift evolution of this plot
-  is weak.} 
+\caption{2D histograms in the plane $\mu$-$D_{\rm off}$ describing the
+  geometry of the bullet encounter. The left
+  panel corresponds to clusters and the right panel to groups. 
+  The weak redshift evolution of the structure in these planes
+  allows us to include halos at all redshifts to construct these figures.
+  The three rectangles (continous, dashed, dashed-dotted)
+  delimit stages of interest in a head-on collision as described in
+  Section \ref{sec:geometry}.}
 \label{fig:geometry}
 \end{figure*}
 
@@ -332,15 +334,17 @@ For pairs on radial trajectories there are three regions of interest
 in this plane that correspond to the three merging stages described
 at the end of Section \ref{sec:geometry} assuming that the sub-halo
 merges (or falls below the BDM detection threshold) right at its
-second pass through the center of the host halo \citep{Poole2006}.  
+second pass through the center of the host halo \citep{Poole2006}.
+These regions are shown as three different rectangled in Figure
+\ref{fig:geometry}. 
 
-The first region has $\mu\sim-1$ and $D_{\rm off}>0.6$, which
+The first region has $\mu<-0.9$ and $D_{\rm off}>0.6$, which
 locates the systems where a head-on collision has just started. The
-second region has $\mu\sim 1$ and $D_{\rm off}<0.6$; at this stage
+second region has $\mu>0.9$ and $D_{\rm off}<0.6$; at this stage
 the collision continues after the first crossing of the host's
 center. The low number of halos with radial infalling velocities and
 displacements $D_{\rm off}>0.6$ suggests that this the maximum range of
-radii for the apogee.  The third region corresponds to $\mu\sim-1$
+radii for the apogee.  The third region corresponds to $\mu<-0.9$
 and $D_{\rm off}<0.6$ that is the the secondary infall after apogee.  
 
 In the next subsection we use the information in this collision
@@ -452,7 +456,7 @@ sample.
 
 \begin{figure*}
 \begin{center}
-\includegraphics[width=0.9\textwidth]{figure_3.pdf}
+\includegraphics[width=0.8\textwidth]{figure_3.pdf}
 \end{center}
 \caption{Integrated probability distribution for the estimated
   DM-gas displacements in the group and cluster samples. Continous (dashed)
@@ -541,6 +545,8 @@ simulation was performed within the Bolshoi project of the University
 of California High-Performance AstroComputing Center (UC-HIPACC) and
 was run at the NASA Ames Research Center. 
 
+We thank the referee for a report that improved the readibility of our
+results. 
 J.E.F-R acknowledges support from Vicerrector\'ia de
 Investigaciones through a FAPA starting grant.
 
