sent to coauthors

--- a/paper/ms.tex
+++ b/paper/ms.tex
@@ -32,7 +32,7 @@
 
 \begin{document} 
 
-\title{The Abundance of Bullet Groups in $\Lambda$CDM}
+\title{The abundance of Bullet-Groups in $\Lambda$CDM}
 \author{J. G. Fern\'andez-Trincado$^{1,2,3}$, J. E. Forero-Romero$^1$,
   G.Foex$^4$, T. Verdugo$^3$ and V. Motta$^4$} 
 \affil{$^1$ Departamento de F\'{i}sica, Universidad de los Andes,
@@ -116,7 +116,7 @@ finding Bullet-like groups in large numbers to test
 $\Lambda$CDM. However, a larger abundance of small mass systems has to
 be weighted by the probability of being in a merger and  presenting a
 large displacement between the DM and gaseous components.  These two
-conditions (merger rates, maximum possible displacement) are a funcion
+conditions (merger rates, maximum possible displacement) are a function
 of DM halo mass in $\Lambda$CDM cosmologies.  A detailed statistical
 study to estimate the DM-gas displacements of bullets has been
 performed for clusters \citep{ForeroRomero2010} but not for lower mass
@@ -209,7 +209,7 @@ sub-halo in a frame of reference where the main halo is at rest; thus
 $\vec{v{}}=\vec{v}_{\rm sub}-\vec{v}_{\rm host}$ and
 $\vec{r{}}=\vec{r}_{\rm sub}-\vec{r}_{\rm host}$, where the subscripts $host$
 and $sub$ refer to the host and sub-halo, respectively. The positions
-$\vec{r}$ correspond to the minium of potential and the velocities
+$\vec{r}$ correspond to the minimum of potential and the velocities
 $\vec{v}$ are computed as an average of the bulk velocities of all
 simulation particles in the structure of interest.
 
@@ -220,7 +220,7 @@ The angle between these two vectors can be quantified by,
     \left\|\vec{r}\right\|} .
  \end{equation} 
 %
-This encondes information about the collision, i.e. cases of
+This encodes information about the collision, i.e. cases of
 $|\mu|\sim 1$ can be considered as head-on collisions while
 $|\mu|< 0.9$ describes a grazing trajectory.  
 
@@ -318,15 +318,15 @@ distributions are similar for the two samples at all redshifts.
   panel corresponds to clusters and the right panel to groups. 
   The weak redshift evolution of the structure in these planes
   allows us to include halos at all redshifts to construct these figures.
-  The three rectangles (continous, dashed, dashed-dotted)
+  The three rectangles (continuous, dashed, dashed-dotted)
   delimit stages of interest in a head-on collision as described in
   Section \ref{sec:geometry}.}
 \label{fig:geometry}
 \end{figure*}
 
-Figure \ref{fig:geometry} presents the geometry of the intereactions using the 
+Figure \ref{fig:geometry} presents the geometry of the interactions using the 
 variables $\mu$ and $D_{\rm off}$. The first evident feature is that
-most of the configurations have head-on encouters, $|\mu|>0.9$
+most of the configurations have head-on encounters, $|\mu|>0.9$
 ($\theta\leq 30^{\circ}$), while only a minority with $|\mu|<0.9$ can
 be described as having  grazing trajectories. 
 
@@ -335,7 +335,7 @@ in this plane that correspond to the three merging stages described
 at the end of Section \ref{sec:geometry} assuming that the sub-halo
 merges (or falls below the BDM detection threshold) right at its
 second pass through the center of the host halo \citep{Poole2006}.
-These regions are shown as three different rectangled in Figure
+These regions are shown as three different rectangles in Figure
 \ref{fig:geometry}. 
 
 The first region has $\mu<-0.9$ and $D_{\rm off}>0.6$, which
@@ -363,13 +363,13 @@ Our estimates are based on the different kinds of trajectories and
 collision stages described in previous sections. To start with, we
 consider that systems with $|\mu|<0.9$ describing grazing
 trajectories have a DM-gas displacement equal to zero.  In systems
-with head-on collissions, $|\mu|>0.9$ the systems with $\mu<-0.9$ and
+with head-on collisions, $|\mu|>0.9$ the systems with $\mu<-0.9$ and
 large displacements $D_{\rm   off}>0.6$ most probably describe the
 beginning of the interaction and should have DM-gas displacements
 equal to zero as well. In all other cases the DM-gas displacement
 should be different from zero with the approximated value
 $d_{\rm   2D}^{\rm bar} = X_{\rm off} R_{\rm   vir}$, where $X_{\rm   off}$ is
-the offset computed between the minium of potential and the center of
+the offset computed between the minimum of potential and the center of
 mass for each host halo computed from all the matter inside the virial
 radius.   
 
@@ -410,7 +410,7 @@ of clusters, consistent with the results reported by
 
 Recently \cite{Foex2013} presented an analysis of $80$ galaxy groups
 in the SL2S sample. From the light distribution, only $34$ objects
-($\sim 42\%$) have regular isophotes, $33$ had ellongated
+($\sim 42\%$) have regular isophotes, $33$ had elongated
 isophotes (hints of merging system), and $13$ ($\sim 16\%$) had a
 clear bi-modal light distribution; \bullg\ is one of these
 $13$ systems.   
@@ -459,7 +459,7 @@ sample.
 \includegraphics[width=0.8\textwidth]{figure_3.pdf}
 \end{center}
 \caption{Integrated probability distribution for the estimated
-  DM-gas displacements in the group and cluster samples. Continous (dashed)
+  DM-gas displacements in the group and cluster samples. Continuous (dashed)
   lines correspond to clusters (groups). The continuous black line
   marked as $P_{2D}$ shows the statistics reported by
   \citet{ForeroRomero2010} for a cosmological simulation including DM
@@ -537,7 +537,13 @@ multi-modal nature from lensing analysis \citep{Foex2013}. An approach
 that can be further exploited with upcoming lensing surveys (e.g. with
  he {\it Euclid} satellite) and pushes for X-ray surveys with higher
 sensibility: chances are larger to find bullets in systems with lower
-X-ray luminosities.
+X-ray luminosities.\\
+
+
+
+
+We thank the referee for a detailed report that improved the readability of
+this Letter. 
 
 The CosmoSim database used in this paper is a service by the
 Leibniz-Institute for Astrophysics Potsdam (AIP). The  Bolshoi
@@ -545,14 +551,12 @@ simulation was performed within the Bolshoi project of the University
 of California High-Performance AstroComputing Center (UC-HIPACC) and
 was run at the NASA Ames Research Center. 
 
-We thank the referee for a report that improved the readibility of our
-results. 
-J.E.F-R acknowledges support from Vicerrector\'ia de
-Investigaciones through a FAPA starting grant.
-
 J.G.F-T acknowledges support from Universidad de los Andes de Bogot\'a
 - Colombia and Centro de Investigaciones de Astronom\'ia (CIDA) -
 Venezuela. 
+
+J.E.F-R acknowledges support from Vicerrector\'ia de
+Investigaciones through a FAPA starting grant.
 
 G.F. acknowledges support from FONDECYT through grant 3120160 and
 ECOS/CONICYT through grant C12U02.  
@@ -562,10 +566,159 @@ T.V. acknowledges support from CONACYT through grant 165365 and
 extranjero para la consolidaci\'on de grupos de investigaci\'on.  
 
 V.M. gratefully acknowledges FONDECYT support through grant 1120741
-and ECOS/CONICYT through grant C12U02. 
+and ECOS/CONICYT through grant C12U02.  
+
+
 
 \bibliographystyle{apj}
-\bibliography{references} 
+%\bibliography{references} 
+\begin{thebibliography}{28}
+\expandafter\ifx\csname natexlab\endcsname\relax\def\natexlab#1{#1}\fi
+
+\bibitem[{{Brada{\v c}} {et~al.}(2008){Brada{\v c}}, {Allen}, {Treu},
+  {Ebeling}, {Massey}, {Morris}, {von der Linden}, \& {Applegate}}]{Bradac2008}
+{Brada{\v c}}, M., {Allen}, S.~W., {Treu}, T., {Ebeling}, H., {Massey}, R.,
+  {Morris}, R.~G., {von der Linden}, A., \& {Applegate}, D. 2008, \apj, 687,
+  959
+
+\bibitem[{{Cabanac} {et~al.}(2007){Cabanac}, {Alard}, {Dantel-Fort}, {Fort},
+  {Gavazzi}, {Gomez}, {Kneib}, {Le F{\`e}vre}, {Mellier}, {Pello}, {Soucail},
+  {Sygnet}, \& {Valls-Gabaud}}]{Cabanac2007}
+{Cabanac}, R.~A., {Alard}, C., {Dantel-Fort}, M., {Fort}, B., {Gavazzi}, R.,
+  {Gomez}, P., {Kneib}, J.~P., {Le F{\`e}vre}, O., {Mellier}, Y., {Pello}, R.,
+  {Soucail}, G., {Sygnet}, J.~F., \& {Valls-Gabaud}, D. 2007, \aap, 461, 813
+
+\bibitem[{{Clowe} {et~al.}(2006){Clowe}, {Brada{\v c}}, {Gonzalez},
+  {Markevitch}, {Randall}, {Jones}, \& {Zaritsky}}]{Clowe2006}
+{Clowe}, D., {Brada{\v c}}, M., {Gonzalez}, A.~H., {Markevitch}, M., {Randall},
+  S.~W., {Jones}, C., \& {Zaritsky}, D. 2006, \apjl, 648, L109
+
+\bibitem[{{Dahle} {et~al.}(2013){Dahle}, {Sarazin}, {Lopez}, {Kouveliotou},
+  {Patel}, {Rol}, {van der Horst}, {Fynbo}, {Wijers}, {Burrows}, {Gehrels},
+  {Grupe}, {Ramirez-Ruiz}, \& {Micha{\l}owski}}]{Dahle2013}
+{Dahle}, H., {Sarazin}, C.~L., {Lopez}, L.~A., {Kouveliotou}, C., {Patel},
+  S.~K., {Rol}, E., {van der Horst}, A.~J., {Fynbo}, J., {Wijers}, R.~A.~M.~J.,
+  {Burrows}, D.~N., {Gehrels}, N., {Grupe}, D., {Ramirez-Ruiz}, E., \&
+  {Micha{\l}owski}, M.~J. 2013, \apj, 772, 23
+
+\bibitem[{{Dawson} {et~al.}(2012){Dawson}, {Wittman}, {Jee}, {Gee}, {Hughes},
+  {Tyson}, {Schmidt}, {Thorman}, {Brada{\v c}}, {Miyazaki}, {Lemaux}, {Utsumi},
+  \& {Margoniner}}]{Dawson2012}
+{Dawson}, W.~A., {Wittman}, D., {Jee}, M.~J., {Gee}, P., {Hughes}, J.~P.,
+  {Tyson}, J.~A., {Schmidt}, S., {Thorman}, P., {Brada{\v c}}, M., {Miyazaki},
+  S., {Lemaux}, B., {Utsumi}, Y., \& {Margoniner}, V.~E. 2012, \apjl, 747, L42
+
+\bibitem[{{Farrar} \& {Rosen}(2007)}]{Farrar2007}
+{Farrar}, G.~R., \& {Rosen}, R.~A. 2007, Physical Review Letters, 98, 171302
+
+\bibitem[{{Fo{\"e}x} {et~al.}(2013){Fo{\"e}x}, {Motta}, {Limousin}, {Verdugo},
+  {More}, {Cabanac}, {Gavazzi}, \& {Mu{\~n}oz}}]{Foex2013}
+{Fo{\"e}x}, G., {Motta}, V., {Limousin}, M., {Verdugo}, T., {More}, A.,
+  {Cabanac}, R., {Gavazzi}, R., \& {Mu{\~n}oz}, R.~P. 2013, \aap, 559, A105
+
+\bibitem[{{Forero-Romero} {et~al.}(2010){Forero-Romero}, {Gottl{\"o}ber}, \&
+  {Yepes}}]{ForeroRomero2010}
+{Forero-Romero}, J.~E., {Gottl{\"o}ber}, S., \& {Yepes}, G. 2010, \apj, 725,
+  598
+
+\bibitem[{{Gastaldello} {et~al.}(2014){Gastaldello}, {Limousin}, {Foex},
+  {Mu\~noz}, {Verdugo}, {Motta}, {More}, {Cabanac}, {Buote}, {Eckert},
+  {Ettori}, {Fritz}, {Ghizzardi}, {Humphrey}, {Meneghetti}, \&
+  {Rossetti}}]{Gastaldello}
+{Gastaldello}, F., {Limousin}, M., {Foex}, G., {Mu\~noz}, R., {Verdugo}, T.,
+  {Motta}, V., {More}, A., {Cabanac}, R., {Buote}, D., {Eckert}, D., {Ettori},
+  S., {Fritz}, A., {Ghizzardi}, S., {Humphrey}, P., {Meneghetti}, M., \&
+  {Rossetti}, M. 2014, \mnras\ accepted
+
+\bibitem[{{Hayashi} \& {White}(2006)}]{Hayashi2006}
+{Hayashi}, E., \& {White}, S.~D.~M. 2006, \mnras, 370, L38
+
+\bibitem[{{Hinshaw} {et~al.}(2013){Hinshaw}, {Larson}, {Komatsu}, {Spergel},
+  {Bennett}, {Dunkley}, {Nolta}, {Halpern}, {Hill}, {Odegard}, {Page}, {Smith},
+  {Weiland}, {Gold}, {Jarosik}, {Kogut}, {Limon}, {Meyer}, {Tucker}, {Wollack},
+  \& {Wright}}]{hinshaw_etal13}
+{Hinshaw}, G., {Larson}, D., {Komatsu}, E., {Spergel}, D.~N., {Bennett}, C.~L.,
+  {Dunkley}, J., {Nolta}, M.~R., {Halpern}, M., {Hill}, R.~S., {Odegard}, N.,
+  {Page}, L., {Smith}, K.~M., {Weiland}, J.~L., {Gold}, B., {Jarosik}, N.,
+  {Kogut}, A., {Limon}, M., {Meyer}, S.~S., {Tucker}, G.~S., {Wollack}, E., \&
+  {Wright}, E.~L. 2013, \apjs, 208, 19
+
+\bibitem[{{Klypin} {et~al.}(1999){Klypin}, {Gottl{\"o}ber}, {Kravtsov}, \&
+  {Khokhlov}}]{BDMb}
+{Klypin}, A., {Gottl{\"o}ber}, S., {Kravtsov}, A.~V., \& {Khokhlov}, A.~M.
+  1999, \apj, 516, 530
+
+\bibitem[{{Klypin} \& {Holtzman}(1997)}]{BDM}
+{Klypin}, A., \& {Holtzman}, J. 1997, ArXiv Astrophysics e-prints
+
+\bibitem[{{Klypin} {et~al.}(2011){Klypin}, {Trujillo-Gomez}, \&
+  {Primack}}]{2011ApJ...740..102K}
+{Klypin}, A.~A., {Trujillo-Gomez}, S., \& {Primack}, J. 2011, \apj, 740, 102
+
+\bibitem[{{Kravtsov} {et~al.}(1997){Kravtsov}, {Klypin}, \&
+  {Khokhlov}}]{Kravtsov1997}
+{Kravtsov}, A.~V., {Klypin}, A.~A., \& {Khokhlov}, A.~M. 1997, \apjs, 111, 73
+
+\bibitem[{{Lee} \& {Baldi}(2012)}]{Lee2012}
+{Lee}, J., \& {Baldi}, M. 2012, \apj, 747, 45
+
+\bibitem[{{Lee} \& {Komatsu}(2010)}]{Lee2010}
+{Lee}, J., \& {Komatsu}, E. 2010, \apj, 718, 60
+
+\bibitem[{{Markevitch} {et~al.}(2004){Markevitch}, {Gonzalez}, {Clowe},
+  {Vikhlinin}, {Forman}, {Jones}, {Murray}, \& {Tucker}}]{Markevitch2004}
+{Markevitch}, M., {Gonzalez}, A.~H., {Clowe}, D., {Vikhlinin}, A., {Forman},
+  W., {Jones}, C., {Murray}, S., \& {Tucker}, W. 2004, \apj, 606, 819
+
+\bibitem[{{Mastropietro} \& {Burkert}(2008)}]{Mastropietro2008}
+{Mastropietro}, C., \& {Burkert}, A. 2008, \mnras, 389, 967
+
+\bibitem[{{Merten} {et~al.}(2011){Merten}, {Coe}, {Dupke}, {Massey}, {Zitrin},
+  {Cypriano}, {Okabe}, {Frye}, {Braglia}, {Jim{\'e}nez-Teja}, {Ben{\'{\i}}tez},
+  {Broadhurst}, {Rhodes}, {Meneghetti}, {Moustakas}, {Sodr{\'e}}, {Krick}, \&
+  {Bregman}}]{Merten2011}
+{Merten}, J., {Coe}, D., {Dupke}, R., {Massey}, R., {Zitrin}, A., {Cypriano},
+  E.~S., {Okabe}, N., {Frye}, B., {Braglia}, F.~G., {Jim{\'e}nez-Teja}, Y.,
+  {Ben{\'{\i}}tez}, N., {Broadhurst}, T., {Rhodes}, J., {Meneghetti}, M.,
+  {Moustakas}, L.~A., {Sodr{\'e}}, Jr., L., {Krick}, J., \& {Bregman}, J.~N.
+  2011, \mnras, 417, 333
+
+\bibitem[{{Milosavljevi{\'c}} {et~al.}(2007){Milosavljevi{\'c}}, {Koda},
+  {Nagai}, {Nakar}, \& {Shapiro}}]{Milosavljevic2007}
+{Milosavljevi{\'c}}, M., {Koda}, J., {Nagai}, D., {Nakar}, E., \& {Shapiro},
+  P.~R. 2007, \apjl, 661, L131
+
+\bibitem[{{More} {et~al.}(2012){More}, {Cabanac}, {More}, {Alard}, {Limousin},
+  {Kneib}, {Gavazzi}, \& {Motta}}]{More2012}
+{More}, A., {Cabanac}, R., {More}, S., {Alard}, C., {Limousin}, M., {Kneib},
+  J.-P., {Gavazzi}, R., \& {Motta}, V. 2012, \apj, 749, 38
+
+\bibitem[{{Murray} {et~al.}(2013){Murray}, {Power}, \& {Robotham}}]{hmfcalc}
+{Murray}, S.~G., {Power}, C., \& {Robotham}, A.~S.~G. 2013, Astronomy and
+  Computing, 3, 23
+
+\bibitem[{{Poole} {et~al.}(2006){Poole}, {Fardal}, {Babul}, {McCarthy},
+  {Quinn}, \& {Wadsley}}]{Poole2006}
+{Poole}, G.~B., {Fardal}, M.~A., {Babul}, A., {McCarthy}, I.~G., {Quinn}, T.,
+  \& {Wadsley}, J. 2006, \mnras, 373, 881
+
+\bibitem[{{Riebe} {et~al.}(2013){Riebe}, {Partl}, {Enke}, {Forero-Romero},
+  {Gottl{\"o}ber}, {Klypin}, {Lemson}, {Prada}, {Primack}, {Steinmetz}, \&
+  {Turchaninov}}]{Riebe2013}
+{Riebe}, K., {Partl}, A.~M., {Enke}, H., {Forero-Romero}, J., {Gottl{\"o}ber},
+  S., {Klypin}, A., {Lemson}, G., {Prada}, F., {Primack}, J.~R., {Steinmetz},
+  M., \& {Turchaninov}, V. 2013, Astronomische Nachrichten, 334, 691
+
+\bibitem[{{Sheth} {et~al.}(2001){Sheth}, {Mo}, \& {Tormen}}]{Sheth2001}
+{Sheth}, R.~K., {Mo}, H.~J., \& {Tormen}, G. 2001, \mnras, 323, 1
+
+\bibitem[{{Springel} \& {Farrar}(2007)}]{Springel2007}
+{Springel}, V., \& {Farrar}, G.~R. 2007, \mnras, 380, 911
+
+\bibitem[{{Thompson} \& {Nagamine}(2012)}]{Thompson2012}
+{Thompson}, R., \& {Nagamine}, K. 2012, \mnras, 419, 3560
+
+\end{thebibliography}
 
 
 \end{document}
