--- a/paper/ms.tex
+++ b/paper/ms.tex
@@ -101,7 +101,7 @@ to explore possible extensions to the concordance cosmological model
 Since then, other examples of Bullet-like systems have been found; 
 MACS J0025.4-1222 \citep{Bradac2008}, Abell 2744 \citep{Merten2011},
 DLSCL J0916.2+2951 \citep{Dawson2012}, ZwCl 1234.0+02916
-\citep{Dahle2013}. Recently \citep{Gastaldello} observed a DM-gas
+\citep{Dahle2013}. Recently \cite{Gastaldello} observed a DM-gas
 displacement of $87\pm 14$\hkpc and a DM-DM separation of $186\pm
 30$\hkpc in \bullg, a low mass cluster system with a total
 mass $2.4\pm 0.6 \times 10^{14}\Msun$ found in the the Strong Lensing
