--- a/paper/ms.tex
+++ b/paper/ms.tex
@@ -46,7 +46,7 @@
   Valpara\'iso, Avda. Gran Breta\~na 1111, Playa Ancha, Valpara\'iso
   2360102, Chile  
 }
-\email{jfernandezt87@gmail.com}
+\email{jfernandez@obs-besancon.fr}
 \email{je.forero@uniandes.edu.co}
 \begin{abstract}
 
