--- a/paper/ms.tex
+++ b/paper/ms.tex
@@ -210,8 +210,7 @@ $\vec{v{}}=\vec{v}_{\rm sub}-\vec{v}_{\rm host}$ and
 $\vec{r{}}=\vec{r}_{\rm sub}-\vec{r}_{\rm host}$, where the subscripts $host$
 and $sub$ refer to the host and sub-halo, respectively. The positions
 $\vec{r}$ correspond to the minimum of potential and the velocities
-$\vec{v}$ are computed as an average of the bulk velocities of all
-simulation particles in the structure of interest.
+$\vec{v}$ are the center of mass velocities.
 
 The angle between these two vectors can be quantified by, 
 \begin{equation}
@@ -237,9 +236,8 @@ In this Letter we work with two quantities that could be inferred
 from observations of Bullet-like systems. The projected distance
 between two dominant DM clumps, $d_{\rm 2D}$, and the projected distance
 between the DM and the gas clumps, $d_{\rm 2D}^{\rm bar}$. The
-projection is computed along the same axis for all halos at all
-redshifts, we present the result of the projection along the $z$-axis
-of the simulation. 
+projection is computed along the $z$-axis for all halos at all
+redshifts.
 
 From the simulation point of view, the first quantity can be
 translated into the 2D projected values of $||\vec{r}||$ and its value
@@ -542,7 +540,7 @@ X-ray luminosities.\\
 
 
 
-We thank the referee for a detailed report that improved the readability of
+We thank the referee for a detailed report that improved the clarity of
 this Letter. 
 
 The CosmoSim database used in this paper is a service by the
@@ -566,8 +564,7 @@ T.V. acknowledges support from CONACYT through grant 165365 and
 extranjero para la consolidaci\'on de grupos de investigaci\'on.  
 
 V.M. gratefully acknowledges FONDECYT support through grant 1120741
-and ECOS/CONICYT through grant C12U02.  
-
+and ECOS/CONICYT through grant C12U02.
 
 
 \bibliographystyle{apj}
