new version for resubmission

--- a/paper/ms.tex
+++ b/paper/ms.tex
@@ -92,10 +92,10 @@ matter and baryonic component in a $\Lambda$CDM Universe
 produce such displacement
 \citep{Milosavljevic2007,Springel2007,Mastropietro2008} and its
 abundance in large N-body cosmological simulations
-\citep{Hayashi2006,Lee2012, Thompson2012}. It has also been used to
+\citep{Hayashi2006,Lee2010, Thompson2012}. It has also been used to
 constrain the dark matter particle self-interaction cross section and
 to explore possible extensions to the concordance cosmological model
-\citep{Farrar2007,Lee2010}.  
+\citep{Farrar2007,Lee2012}.  
  
 
 Since then, other examples of Bullet-like systems have been found; 
@@ -312,13 +312,14 @@ distributions are similar for the two samples at all redshifts.
 \includegraphics[width=1.0\textwidth]{figure_2.pdf}
 \end{center}
 \caption{2D histograms in the plane $\mu$-$D_{\rm off}$ describing the
-  geometry of the bullet encounter. The left
-  panel corresponds to clusters and the right panel to groups. 
-  The weak redshift evolution of the structure in these planes
-  allows us to include halos at all redshifts to construct these figures.
-  The three rectangles (continuous, dashed, dashed-dotted)
-  delimit stages of interest in a head-on collision as described in
-  Section \ref{sec:geometry}.}
+  geometry of the bullet encounter. The left panel corresponds to
+  clusters and the right panel to groups.  The weak redshift evolution
+  of the structure in these planes allows us to include halos at all
+  redshifts to construct these figures. The three rectangles
+  (continuous, dashed, dot-dashed) roughly delimit stages of interest
+  in a head-on collision (initial infall, first crossing until apogee,
+  return after apogee) as described in Section 
+  \ref{sec:geometry}.}  
 \label{fig:geometry}
 \end{figure*}
 
@@ -336,14 +337,15 @@ second pass through the center of the host halo \citep{Poole2006}.
 These regions are shown as three different rectangles in Figure
 \ref{fig:geometry}. 
 
-The first region has $\mu<-0.9$ and $D_{\rm off}>0.6$, which
-locates the systems where a head-on collision has just started. The
-second region has $\mu>0.9$ and $D_{\rm off}<0.6$; at this stage
-the collision continues after the first crossing of the host's
-center. The low number of halos with radial infalling velocities and
-displacements $D_{\rm off}>0.6$ suggests that this the maximum range of
-radii for the apogee.  The third region corresponds to $\mu<-0.9$
-and $D_{\rm off}<0.6$ that is the the secondary infall after apogee.  
+The first region (continuous rectangle) has $\mu<-0.9$ and $D_{\rm
+  off}>0.6$, which locates the systems where a head-on collision has
+just started. The second region (dashed rectangle) has $\mu>0.9$ and
+$D_{\rm off}<0.6$; at this stage the collision continues after the
+first crossing of the host's center. The low number of halos with
+radial infalling velocities and displacements $D_{\rm off}>0.6$
+suggests that this the maximum range of radii for the apogee.  The
+third region (dot-dashed rectangle) corresponds to $\mu<-0.9$ and
+$D_{\rm off}<0.6$ that is the the secondary infall after apogee. 
 
 In the next subsection we use the information in this collision
 sequence to estimate the expected DM-gas displacement. 
@@ -568,7 +570,6 @@ and ECOS/CONICYT through grant C12U02.
 
 
 \bibliographystyle{apj}
-%\bibliography{references} 
 \begin{thebibliography}{28}
 \expandafter\ifx\csname natexlab\endcsname\relax\def\natexlab#1{#1}\fi
 
